[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/LadyBug/LadyBug.gd" type="Script" id=1]
[ext_resource path="res://Enemies/LadyBug/sprite_sheet.png" type="Texture" id=2]
[ext_resource path="res://Enemies/LadyBug/plasterbrain__cartoon-pinch.wav" type="AudioStream" id=3]
[ext_resource path="res://Enemies/LadyBug/bee_sound.ogg" type="AudioStream" id=4]


[sub_resource type="CapsuleShape2D" id=1]
radius = 8.83306
height = 6.7797

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 180, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=3]
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[node name="LadyBug" type="KinematicBody2D" groups=[
"ENEMY",
]]
collision_layer = 4
collision_mask = 7
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10
frame = 5

[node name="CollisionNormal" type="CollisionShape2D" parent="."]
position = Vector2( 2.2, 2.5 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="CollisionFlying" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -14.5089, -10.9484, 3.34837, 10.0734, 10.8077, 2.27497, 3.12233, -8.80105 )

[node name="DownLeft" type="RayCast2D" parent="."]
position = Vector2( -11, 0 )
enabled = true
cast_to = Vector2( 0, 13 )

[node name="DownRight" type="RayCast2D" parent="."]
position = Vector2( 12, 0 )
enabled = true
cast_to = Vector2( 0, 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 2 )
anims/fly = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="Travel" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Buzz" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 12.0
max_distance = 1024.0
attenuation = 0.420448
[connection signal="timeout" from="Travel" to="." method="_on_Travel_timeout"]
